// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDialog already following card 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  채널 게시
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  Following
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              data-rfd-droppable-context-id="_r_r_"
              data-rfd-droppable-id="property-list"
            />
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="SubCards"
          >
            <div
              class="SubCards__header"
            >
              <i
                class="CompassIcon icon-format-list-bulleted"
              />
              <span
                class="SubCards__header-title"
              >
                Sub-tasks
              </span>
            </div>
            <div
              class="SubCards__content"
            >
              <div
                class="SubCards__actions"
              >
                <div
                  class="SubCards__add"
                  role="button"
                  tabindex="0"
                >
                  <i
                    class="CompassIcon icon-plus"
                  />
                  <span>
                    Add new page
                  </span>
                </div>
                <div
                  class="SubCards__link-wrapper"
                >
                  <div
                    class="SubCards__link"
                    role="button"
                    tabindex="0"
                  >
                    <i
                      class="CompassIcon icon-link-variant"
                    />
                    <span>
                      Link existing item
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="BlockSuiteEditor BlockSuiteEditor--error"
          >
            <span>
              Failed to load editor
            </span>
            <p>
              Cannot read properties of undefined (reading 'replace')
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog limited card shows hidden view (no toolbar) 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  채널 게시
                </span>
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail  CardDetail--is-limited"
        >
          <div
            class="IconSelector"
          >
            <div
              class="octo-icon size-l readonly"
            >
              <span>
                i
              </span>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable readonly title"
              height="0"
              placeholder="Untitled"
              readonly=""
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable readonly title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="CardDetail__limited-wrapper"
          >
            <span
              class="CardDetail__limited-bg"
            >
              <svg
                fill="none"
                height="521"
                viewBox="0 0 468 521"
                width="468"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="48"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="48"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="96"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="96"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="156"
                  y="144"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="296"
                  x="172"
                  y="144"
                />
                <rect
                  fill="#3D3C40"
                  fill-opacity="0.16"
                  height="1"
                  width="468"
                  y="192"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="468"
                  y="209"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="32"
                  rx="4"
                  width="468"
                  y="257"
                />
                <rect
                  fill="#3D3C40"
                  fill-opacity="0.16"
                  height="1"
                  width="468"
                  y="305"
                />
                <rect
                  fill="#3F4350"
                  fill-opacity="0.08"
                  height="199"
                  rx="4"
                  width="468"
                  y="322"
                />
              </svg>
            </span>
            <p
              class="CardDetail__limited-title"
            >
              This card is hidden
            </p>
            <p
              class="CardDetail__limited-body"
            >
              Upgrade to our Professional or Enterprise plan to view archived cards, have unlimited views per boards, unlimited cards and more.
              <br />
              <a
                class="CardDetail__limited-link"
                role="button"
              >
                Learn more about our plans.
              </a>
            </p>
            <button
              type="button"
            >
              <span>
                Upgrade
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return a cardDialog readonly 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  채널 게시
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  Follow
                </span>
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              class="octo-icon size-l readonly"
            >
              <span>
                i
              </span>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable readonly title"
              height="0"
              placeholder="Untitled"
              readonly=""
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable readonly title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              data-rfd-droppable-context-id="_r_6_"
              data-rfd-droppable-id="property-list"
            />
          </div>
          <div
            class="SubCards"
          >
            <div
              class="SubCards__header"
            >
              <i
                class="CompassIcon icon-format-list-bulleted"
              />
              <span
                class="SubCards__header-title"
              >
                Sub-tasks
              </span>
            </div>
            <div
              class="SubCards__content"
            >
              <div
                class="SubCards__empty"
              >
                No sub-tasks
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          />
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="BlockSuiteEditor BlockSuiteEditor--error"
          >
            <span>
              Failed to load editor
            </span>
            <p>
              Cannot read properties of undefined (reading 'replace')
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return cardDialog menu content 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  채널 게시
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  Follow
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              data-rfd-droppable-context-id="_r_c_"
              data-rfd-droppable-id="property-list"
            />
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="SubCards"
          >
            <div
              class="SubCards__header"
            >
              <i
                class="CompassIcon icon-format-list-bulleted"
              />
              <span
                class="SubCards__header-title"
              >
                Sub-tasks
              </span>
            </div>
            <div
              class="SubCards__content"
            >
              <div
                class="SubCards__actions"
              >
                <div
                  class="SubCards__add"
                  role="button"
                  tabindex="0"
                >
                  <i
                    class="CompassIcon icon-plus"
                  />
                  <span>
                    Add new page
                  </span>
                </div>
                <div
                  class="SubCards__link-wrapper"
                >
                  <div
                    class="SubCards__link"
                    role="button"
                    tabindex="0"
                  >
                    <i
                      class="CompassIcon icon-link-variant"
                    />
                    <span>
                      Link existing item
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="BlockSuiteEditor BlockSuiteEditor--error"
          >
            <span>
              Failed to load editor
            </span>
            <p>
              Cannot read properties of undefined (reading 'replace')
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog return cardDialog menu content and cancel delete confirmation do nothing 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  채널 게시
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  Follow
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              data-rfd-droppable-context-id="_r_i_"
              data-rfd-droppable-id="property-list"
            />
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="SubCards"
          >
            <div
              class="SubCards__header"
            >
              <i
                class="CompassIcon icon-format-list-bulleted"
              />
              <span
                class="SubCards__header-title"
              >
                Sub-tasks
              </span>
            </div>
            <div
              class="SubCards__content"
            >
              <div
                class="SubCards__actions"
              >
                <div
                  class="SubCards__add"
                  role="button"
                  tabindex="0"
                >
                  <i
                    class="CompassIcon icon-plus"
                  />
                  <span>
                    Add new page
                  </span>
                </div>
                <div
                  class="SubCards__link-wrapper"
                >
                  <div
                    class="SubCards__link"
                    role="button"
                    tabindex="0"
                  >
                    <i
                      class="CompassIcon icon-link-variant"
                    />
                    <span>
                      Link existing item
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="BlockSuiteEditor BlockSuiteEditor--error"
          >
            <span>
              Failed to load editor
            </span>
            <p>
              Cannot read properties of undefined (reading 'replace')
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Dialog dialog-back confirmation-dialog-box size--small"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            />
          </div>
          <div
            class="toolbar--right"
          >
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="box-area"
          title="Confirmation Dialog Box"
        >
          <h3
            class="text-heading5"
          >
            Confirm card delete!
          </h3>
          <div
            class="sub-text"
          />
          <div
            class="action-buttons"
          >
            <button
              title="Cancel"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              title="Delete"
              type="submit"
            >
              <span>
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog should match snapshot 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-paperclip"
                />
                <span>
                  Attach
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  채널 게시
                </span>
              </button>
              <button
                type="button"
              >
                <span>
                  Follow
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <div
                class="octo-icon size-l"
              >
                <span>
                  i
                </span>
              </div>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable title"
              height="0"
              placeholder="Untitled"
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              data-rfd-droppable-context-id="_r_0_"
              data-rfd-droppable-id="property-list"
            />
            <div
              class="octo-propertyname add-property"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <span>
                    + Add a property
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="SubCards"
          >
            <div
              class="SubCards__header"
            >
              <i
                class="CompassIcon icon-format-list-bulleted"
              />
              <span
                class="SubCards__header-title"
              >
                Sub-tasks
              </span>
            </div>
            <div
              class="SubCards__content"
            >
              <div
                class="SubCards__actions"
              >
                <div
                  class="SubCards__add"
                  role="button"
                  tabindex="0"
                >
                  <i
                    class="CompassIcon icon-plus"
                  />
                  <span>
                    Add new page
                  </span>
                </div>
                <div
                  class="SubCards__link-wrapper"
                >
                  <div
                    class="SubCards__link"
                    role="button"
                    tabindex="0"
                  >
                    <i
                      class="CompassIcon icon-link-variant"
                    />
                    <span>
                      Link existing item
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          >
            <div
              class="CommentsList__new"
            >
              <img
                class="comment-avatar"
              />
              <div
                class="MarkdownEditor octo-editor newcomment "
              >
                <div
                  class="octo-editor-preview octo-placeholder"
                  data-testid="preview-element"
                />
              </div>
            </div>
            <hr
              class="CommentsList__divider"
            />
          </div>
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="BlockSuiteEditor BlockSuiteEditor--error"
          >
            <span>
              Failed to load editor
            </span>
            <p>
              Cannot read properties of undefined (reading 'replace')
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/cardDialog should match snapshot without permissions 1`] = `
<div>
  <div
    class="Dialog dialog-back cardDialog size--medium"
  >
    <div
      class="backdrop"
    />
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <div>
            <h1
              class="dialog-title"
            >
              <div />
            </h1>
          </div>
          <div
            class="toolbar--right"
          >
            <div
              class="d-flex"
            >
              <button
                type="button"
              >
                <span>
                  Follow
                </span>
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-dots-horizontal OptionsIcon"
                />
              </button>
            </div>
            <button
              aria-label="Close dialog"
              title="Close dialog"
              type="button"
            >
              <i
                class="CompassIcon icon-close CloseIcon"
              />
            </button>
          </div>
        </div>
        <div
          class="CardDetail "
        >
          <div
            class="IconSelector"
          >
            <div
              class="octo-icon size-l readonly"
            >
              <span>
                i
              </span>
            </div>
          </div>
          <div
            class="EditableAreaWrap"
          >
            <textarea
              class="EditableArea Editable readonly title"
              height="0"
              placeholder="Untitled"
              readonly=""
              rows="1"
              spellcheck="true"
              title="title"
            >
              title
            </textarea>
            <div
              class="EditableAreaContainer"
            >
              <textarea
                aria-hidden="true"
                class="EditableAreaReference Editable readonly title"
                dir="auto"
                disabled=""
                rows="1"
              >
                title
              </textarea>
            </div>
          </div>
          <div
            class="octo-propertylist CardDetailProperties"
          >
            <div
              data-rfd-droppable-context-id="_r_3_"
              data-rfd-droppable-id="property-list"
            />
          </div>
          <div
            class="SubCards"
          >
            <div
              class="SubCards__header"
            >
              <i
                class="CompassIcon icon-format-list-bulleted"
              />
              <span
                class="SubCards__header-title"
              >
                Sub-tasks
              </span>
            </div>
            <div
              class="SubCards__content"
            >
              <div
                class="SubCards__empty"
              >
                No sub-tasks
              </div>
            </div>
          </div>
          <hr />
          <div
            class="CommentsList"
          />
        </div>
        <div
          class="CardDetail CardDetail--fullwidth content-blocks"
        >
          <div
            class="BlockSuiteEditor BlockSuiteEditor--error"
          >
            <span>
              Failed to load editor
            </span>
            <p>
              Cannot read properties of undefined (reading 'replace')
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
